<resources>
    <string name="app_name">MyApplication</string>
    <string name="text_enter_username">Email Address</string>
    <string name="text_enter_password">Password</string>
    <string name="button_register">register</string>
    <string name="button_log_in">log in</string>
    <string name="comment_reg">Please type in your username and password,\n the password should be more than 10 letters</string>
    <string name="comment_log">Please type in your username and password\n</string>
    <string name="button_turn_to_register">sign up</string>
    <string name="button_turn_to_login">sign in</string>
    <string name="text_enter_title">Title</string>
    <string name="text_enter_body">Body</string>
    <string name="button_save">Finish\n Save</string>
    <string name="button_discard">Discard</string>
</resources>
